@startuml

' Class styles
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor #EEEBDC
skinparam classBorderColor #A80036

' AddressController Class
class AddressController {
  + AddressService addressService
  + ResponseEntity<AddressDTO> getAddressByUserId(Long id)
  + ResponseEntity<AddressDTO> updateAddress(Long id, AddressDTO addressDTO)
}

' AddressService Class
class AddressService {
  + AddressDTO getAddressByUserId(Long id)
  + AddressDTO updateAddress(Long id, AddressDTO addressDTO)
}

' AddressDTO Class
class AddressDTO {
  + Long id
  + String street
  + String city
  + String state
  + String zipCode
  + String country
}

' Relationships
AddressController --> AddressService : uses
AddressService --> AddressDTO : returns

@enduml